<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.menu.Preferences">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imagePre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:orientation="horizontal"
                       android:layout_height="0dp"
                       android:layout_weight="2">

                       <TextView
                           android:id="@+id/text"
                           android:layout_width="0dp"
                           android:layout_weight="4"
                           android:layout_height="wrap_content"
                           android:text="hello"
                           android:textSize="28sp"
                           android:textStyle="bold" />

                       <Button
                           android:id="@+id/plus"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_marginEnd="8dp"
                           android:layout_weight="1"
                           android:hint="@string/plus"
                           app:layout_constraintBottom_toBottomOf="parent"
                           app:layout_constraintEnd_toStartOf="@+id/number"
                           app:layout_constraintTop_toTopOf="parent"
                           app:layout_constraintVertical_bias="0.615" />

                       <Button
                           android:id="@+id/minus"
                           android:layout_width="0dp"
                           android:layout_weight="1"
                           android:layout_height="wrap_content"
                           android:hint="@string/minus" />
                       <TextView
                           android:id="@+id/number"
                           android:layout_width="0dp"
                           android:layout_weight="1"
                           android:padding="16dp"
                           android:layout_height="wrap_content"
                           android:text="1"
                           android:textSize="30sp" />
                   </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/price"
                        android:text="20 EGP"
                        android:textStyle="bold"
                         android:padding="8dp"
                        />
                </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:id="@+id/size"
                    android:text="Size"
                    />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/cup1"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/cup"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/cup2"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/cup1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:id="@+id/cup3"
                    android:clickable="true"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/cup2"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:id="@+id/sugar"
                    android:text="sugar"
                    />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/nosugar"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sugar_free"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/sugar1"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sugar"/>
                <ImageView
                    android:layout_width="0dp"
                    android:id="@+id/sugar2"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/no_sugar"/>
                <ImageView
                    android:layout_width="0dp"
                    android:id="@+id/sugar3"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sugar_cubes"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addcart"
                    android:hint="@string/addCart"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>